--- a/BE/package.json
+++ b/BE/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mysql2": "^2.0.0"
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.36.0"
   }
 }
